<!--  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softwin.gamepad.MainActivity" >
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/mode_title"
        android:textSize="25sp" />
    
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/radio_ps3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ps3_mode"
        android:layout_marginLeft="50dp"
        android:textSize="25sp" />
    
    <RadioButton
        android:id="@+id/radio_xbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/xbox_mode"
        android:layout_marginLeft="50dp"
        android:textSize="25sp" />
    
    <RadioButton
        android:id="@+id/radio_cf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/cf_mode"
        android:layout_marginLeft="50dp"
        android:textSize="25sp" />
    </RadioGroup>
    
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/exchange_title"
        android:textSize="25sp" />
    
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/radio_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/default_mode"
        android:layout_marginLeft="50dp"
        android:textSize="25sp" />
    
    <RadioButton
        android:id="@+id/radio_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_mode"
        android:layout_marginLeft="50dp"
        android:textSize="25sp" />
            
    </RadioGroup>
     
    </LinearLayout>
    